# django_demo_shop

./: .gitignore  README.rst  pyproject.toml
shop_demo/: README.rst  fixtures.json
shop_demo/cart/: cart.py  forms.py  urls.py  views.py
shop_demo/cart/templates/cart/: detail.html
shop_demo/config/: settings.py  urls.py
shop_demo/orders/: admin.py  forms.py  models.py  urls.py  views.py
shop_demo/orders/migrations/: 0001_initial.py
shop_demo/orders/templates/admin/orders/order/: detail.html
shop_demo/orders/templates/orders/order/: create.html  created.html
shop_demo/shop/: admin.py  models.py  urls.py  views.py
shop_demo/shop/migrations/: 0001_initial.py
shop_demo/shop/templates/: base.html
shop_demo/shop/templates/shop/: product_detail.html  products_in_category.html
shop_demo/user/: models.py
shop_demo/user/migrations/: 0001_initial.py
shop_demo/user/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
shop_demo/user/templates/user/: edit.html  login.html  register.html  register_done.html
