[tool.poetry]
name = "shop_demo"
version = "0.1.0"
description = "Shop demo made with django."
authors = ["Aleksei Panfilov"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
psycopg2-binary = "^2.8"
pillow = "^8.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
